Fix overflow

--- a/packages/creator-hub/renderer/src/components/Modals/WorldSettingsModal/tabs/LayoutTab/styles.css
+++ b/packages/creator-hub/renderer/src/components/Modals/WorldSettingsModal/tabs/LayoutTab/styles.css
@@ -142,6 +142,7 @@
 .LayoutTab .SceneItem .SceneInfo {
   flex: 1;
   padding: 8px 0;
+  overflow: hidden;
 }
 
 .LayoutTab .SceneTitle {
